# native_opencv

./: .gitignore  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle
android/Classes/: native_opencv.cpp
android/Classes/EyeTracker/: EyeTracker.cpp  EyeTracker.h
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/converus/native_opencv/: NativeOpencvPlugin.kt
example/: pubspec.yaml
example/android/app/: CMakeLists.txt  build.gradle  local.properties
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/converus/native_opencv_example/: MainActivity.kt
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: native_opencv.podspec
lib/: native_opencv.dart  native_opencv_method_channel.dart  native_opencv_platform_interface.dart
test/: native_opencv_method_channel_test.dart  native_opencv_test.dart
